Fix scrollbar-x height

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -62,6 +62,7 @@
 
 ::-webkit-scrollbar {
   width: 10px;
+  height: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
